2007-05-02  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button), (clearlooks_glossy_draw_slider):
	Now "glow" becomes a shadow for 3d effects on prelight buttons
	Draw_sliders now use params->state_type for the filled area
	Check out new gtkrc updates on module gnome-themes for the new buttons

2007-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_resize_grip):
	Forgot a multiplication by 3.

2007-05-01  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_draw_button_gloss), (clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_tab),
	(clearlooks_glossy_draw_list_view_header),
	(clearlooks_register_style_glossy):
	New listview headers for Glossy style
	Shaded inset for pressed buttons

	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	Update in copyright notice

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_slider):
	Small mistake from the last commit

2007-05-01  Andrea Cimitan  <andrea.cimitan@gmail.com>

        * engines/clearlooks/src/clearlooks_draw_glossy.c:
        (clearlooks_draw_button_gloss), (clearlooks_set_border_color),
        (clearlooks_glossy_draw_inset),
        (clearlooks_glossy_draw_highlight_and_shade),
        (clearlooks_glossy_draw_button),
        (clearlooks_glossy_draw_progressbar_trough),
        (clearlooks_glossy_draw_progressbar_fill),
        (clearlooks_glossy_scale_draw_gradient),
        (clearlooks_glossy_draw_scale_trough),
        (clearlooks_glossy_draw_tab), (clearlooks_glossy_draw_slider),
        (clearlooks_glossy_draw_scrollbar_stepper),
        (clearlooks_glossy_draw_scrollbar_slider),
        (clearlooks_register_style_glossy):
        Glossy Style rewritten to be *cool* :)
        New Ideas came from my experience with "Murrine Engine"
